# icarus_auth

./: .dockerignore.yaml  .env.docker.sample  .env.local.sample  .env.sample  .gitignore  Cargo.toml  Dockerfile  READEME.md  README.md  docker-compose.yaml  docker_run.txt  run_migrations.txt
.gitea/workflows/: tag_release.yml  workflow.yml
migrations/: 20250402221858_init_migrate.sql  20250802185652_passphrase_data.sql
src/: lib.rs  main.rs
src/callers/: common.rs  login.rs  mod.rs  register.rs
src/config/: mod.rs
src/db/: init.rs
src/hashing/: mod.rs
src/models/: common.rs
src/repo/: mod.rs
src/token_stuff/: mod.rs
tests/: auth_tests.rs
