[package]
name = "icarus_auth"
version = "0.6.5"
edition = "2024"
rust-version = "1.90"

[dependencies]
axum = { version = "0.8.6" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.20" }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
hyper = { version = "1.7.0" }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "time", "uuid"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
argon2 = { version = "0.5.3", features = ["std"] } # Use the latest 0.5.x version
rand = { version = "0.9.2" }
time = { version = "0.3.41", features = ["macros", "serde"] }
josekit = { version = "0.10.3" }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
icarus_models = { git = "ssh://git@git.kundeng.us/phoenix/icarus_models.git", tag = "v0.8.0" }
icarus_envy = { git = "ssh://git@git.kundeng.us/phoenix/icarus_envy.git", tag = "v0.5.0" }

[dev-dependencies]
http-body-util = { version = "0.1.3" }
url = { version = "2.5.7" }
once_cell = { version = "1.21.3" } # Useful for lazy initialization in tests/app setup
